--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ body {
   background-color: #02101D;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .App {
   position: relative;
 }
